    from a previous subscription.
20. Apply 'Single Tracks' tweak to play queue items.
21. Parse more fields from CUE files.
22. Fix image requests when using composers.
23. Load Various Artist image, if found.
24. If no lyrics found, create initial file when asked to edit.
25. Due to Last.fm changes, artist images are no longer supported. See
    ARTIST_IMAGE_SUPPORT sections for removed code.

2.3.3
-----
 1. For Opus files, use R128_TRACK_GAIN and R128_ALBUM_GAIN to store replaygain
    values.
 2. Remove user-agent checking when serving local files, this is easily
    fake-able and breaks playback to forked-daap (and mopidy?)
 3. Add '.opus' to list of recognised extensions for local files.
 4. Initialise network proxy factory when starting.
 5. If artist, album, and title are empty in replaygain dialog, then show
    filename in title column.
 6. Opus does not use replaygain peak tags, so do not write.
 7. Use same 'album key' for all discs in an album, so that playqueue groups
    them together, and shuffle by albums keeps them together.
 8. Remove confirmation dialog when saving replaygain tags.
 9. Fix saving 'Descending' order for smart playlists.
10. When getting 'basic' title of song, also remove any 'prod. XXX', etc.
    values.
11. Allow .jpeg as extension from cover dialog.
12. Fix QMediaPlayer stuck with network streams - thanks to theirix
13. Always show volume control.
14. Fix 'Show Current Song Information' (i) toolbar button showing when
    interface is collpased and resized.
15. When expand intrface, don't shrink width. Conversely, when collapsing
    don't expand width.
16. In grouped style playqueue, only show album duration if there is more than
    one track from the album.
17. Don't try to reduce brackets when showing album name and year.
18. Add option to sort smart playlists by title.
19. Change toolbar colours if palette changes.
20. Add another qt5ct palette work-around.