@@ -30,6 +30,8 @@
 24. If no lyrics found, create initial file when asked to edit.
 25. Due to Last.fm changes, artist images are no longer supported. See
     ARTIST_IMAGE_SUPPORT sections for removed code.
+26. When adding tracks via commandline, only play if queue is currently empty,
+    otherwise just append new tracks.
 
 2.3.3
 -----
